--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.0",
     "core-js": "^3.3.2",
     "jspdf": "^1.5.3",
+    "pdfmake": "^0.1.62",
     "vue": "^2.6.10"
   },
   "devDependencies": {
